website/i18n/fr/docusaurus-plugin-content-docs/version-2.x/docusaurus-core.mdx
---
sidebar_label: API client
---

# API client Docusaurus

Docusaurus fournit quelques API sur les clients qui peuvent vous être utiles lors de la construction de votre site.

## Composants {#components}

### `<ErrorBoundary />` {#errorboundary}

Ce composant crée une [Limite d'erreur de React](https://reactjs.org/docs/error-boundaries.html).

Utilisez-le pour envelopper les composants susceptibles de se bloquer, et affichez une solution de repli lorsque cela se produit au lieu de faire planter toute l'application.

```jsx
import React from 'react';
import ErrorBoundary from '@docusaurus/ErrorBoundary';

const SafeComponent = () => (
  <ErrorBoundary
    fallback={({error, tryAgain}) => (
      <div>
        <p>Ce composant s'est planté à cause d'une erreur : {error.message}.</p>
        <button onClick={tryAgain}>Réessayez !</button>
      </div>
    )}>
    <SomeDangerousComponentThatMayThrow />
  </ErrorBoundary>
);
```

```mdx-code-block
import ErrorBoundaryTestButton from "@site/src/components/ErrorBoundaryTestButton"
```

:::tip

Pour le voir en action, cliquez ici : <ErrorBoundaryTestButton/>

:::

:::info

Docusaurus utilise ce composant pour détecter les erreurs dans la mise en page du thème, mais aussi dans l'ensemble de l'application.

:::

:::note

Ce composant ne détecte pas les erreurs de construction et protège uniquement contre les erreurs de rendu côté client qui peuvent survenir lors de l'utilisation de composants d'état de React.

:::

#### Props {#errorboundary-props}

- `fallback` : un callback optionnel de rendu renvoyant un élément JSX. Il recevra un objet avec 2 attributs : `error`, l'erreur qui a été détectée, et `tryAgain`, une fonction (`() = void`) de rappel pour réinitialiser l'erreur dans le composant et essayer de le rendre à nouveau. S'il n'est pas présent, `@theme/Error` sera rendu à la place. `@theme/Error` est utilisé pour les limites d'erreur qui enveloppent le site, au-dessus de la mise en page.

:::warning

La prop `fallback` est une callback, et **n'est pas un composant fonctionnel React**. Vous ne pouvez pas utiliser les hooks React à l'intérieur de ce callback.

:::

### `<Head/>` {#head}

Ce composant React réutilisable gérera toutes les modifications apportées à la tête (« Head ») du document. Il prend des balises HTML simples et affiche des balises HTML simples et est facile à utiliser pour les débutants. C'est une enveloppe autour de [React Helmet](https://github.com/nfl/react-helmet).

Exemple d'utilisation :

```jsx
import React from 'react';
// highlight-next-line
import Head from '@docusaurus/Head';

const MySEO = () => (
  // highlight-start
  <Head>
    <meta property="og:description" content="My custom description" />
    <meta charSet="utf-8" />
    <title>My Title</title>
    <link rel="canonical" href="http://mysite.com/example" />
  </Head>
  // highlight-end
);
```

Les composants imbriqués ou les derniers remplaceront les utilisations dupliquées :

```jsx
<Parent>
  {/* highlight-start */}
  <Head>
    <title>Mon Titre</title>
    <meta name="description" content="Helmet application" />
  </Head>
  {/* highlight-end */}
  <Child>
    {/* highlight-start */}
    <Head>
      <title>Titre imbriqué</title>
      <meta name="description" content="Composant imbriqué" />
    </Head>
    {/* highlight-end */}
  </Child>
</Parent>
```

Sorties :

```html
<head>
  <title>Titre imbriqué</title>
  <meta name="description" content="Composant imbriqué" />
</head>
```

### `<Link/>` {#link}

Ce composant permet de créer des liens vers des pages internes ainsi qu'une puissante fonctionnalité de performance appelée « préchargement ». Le préchargement est utilisé pour récupérer les ressources à l'avance, de sorte que les ressources soient récupérées au moment où l'utilisateur navigue avec ce composant. Nous utilisons un `IntersectionObserver` pour récupérer une requête de faible priorité lorsque le `<Link>` est dans le viewport, puis nous utilisons un événement `onMouseOver` pour déclencher une requête de haute priorité lorsqu'il est probable qu'un utilisateur navigue vers la ressource demandée.

Ce composant est une enveloppe autour du composant `<Link>` de react-router qui ajoute des améliorations utiles spécifiques à Docusaurus. Tous les props sont transmis au composant `<Link>` de react-router.

Les liens externes fonctionnent également, et ont automatiquement ces props : `target="_blank" rel="noopener noreferrer"`.

```jsx
import React from 'react';
// highlight-next-line
import Link from '@docusaurus/Link';

const Page = () => (
  <div>
    <p>
      {/* highlight-next-line */}
      Check out my <Link to="/blog">blog</Link>!
    </p>
    <p>
      {/* highlight-next-line */}
      Follow me on <Link to="https://x.com/docusaurus">X</Link>!
    </p>
  </div>
);
```

#### `to`: string {#to-string}

L'emplacement cible vers lequel vous souhaitez naviguer. Exemple : `/docs/introduction`.

```jsx
<Link to="/courses" />
```

:::tip

Préférez ce composant aux balises vanilla `<a>` car Docusaurus fait beaucoup d'optimisations (par exemple, détection de chemins cassés, prélecture, application de l'URL de base...) si vous utilisez `<Link>`.

:::

### `<Redirect/>` {#redirect}

Rendre un `<Redirect>` permet de naviguer vers un nouvel emplacement. Le nouvel emplacement remplacera l'emplacement actuel de la pile d'historique comme le font les redirections côté serveur (HTTP 3xx). Vous pouvez consulter la [documentation de React Router Redirect](https://reacttraining.com/react-router/web/api/Redirect) pour plus d'informations sur les props disponibles.

Exemple d'utilisation :

```jsx
import React from 'react';
// highlight-next-line
import {Redirect} from '@docusaurus/router';

const Home = () => {
  // highlight-next-line
  return <Redirect to="/docs/test" />;
};
```

:::note

`@docusaurus/router` implémente [React Router](https://reacttraining.com/react-router/web/guides/quick-start) et prend en charge ses fonctionnalités.

:::

### `<BrowserOnly/>` {#browseronly}

Le composant `<BrowserOnly>` permet de rendre les composants React uniquement dans le navigateur après que l'application React se soit hydratée.

:::tip

Utilisez-le pour intégrer du code qui ne peut pas s'exécuter dans Node.js, parce que des objets `window` ou `document` sont accédés.

:::

#### Props {#browseronly-props}

- `children` : prop de fonction de rendu retournant le JSX du navigateur uniquement. Ne sera pas exécuté dans Node.js
- `fallback` (facultatif) : JSX à rendre sur le serveur (Node.js) et jusqu'à ce que l'hydratation React soit terminée.

#### Exemple avec du code {#browseronly-example-code}

```jsx
// highlight-start
import BrowserOnly from '@docusaurus/BrowserOnly';
// highlight-end

const MyComponent = () => {
  return (
    // highlight-start
    <BrowserOnly>
      {() => <span>page url = {window.location.href}</span>}
    </BrowserOnly>
    // highlight-end
  );
};
```

#### Exemple avec une bibliothèque {#browseronly-example-library}

```jsx
// highlight-start
import BrowserOnly from '@docusaurus/BrowserOnly';
// highlight-end

const MyComponent = (props) => {
  return (
    // highlight-start
    <BrowserOnly fallback={<div>Loading...</div>}>
      {() => {
        const LibComponent = require('some-lib').LibComponent;
        return <LibComponent {...props} />;
      }}
    </BrowserOnly>
    // highlight-end
  );
};
```

### `<Interpolate/>` {#interpolate}

Un composant d'interpolation simple pour le texte contenant des placeholders dynamiques.

Les placeholders seront remplacés par les valeurs dynamiques fournies et les éléments JSX de votre choix (chaînes, liens, éléments stylés...).

#### Props {#interpolate-props}

- `children` : texte contenant des placeholders d'interpolation comme `{placeholderName}`
- `values` : objet contenant des valeurs placeholder d'interpolation

```jsx
import React from 'react';
import Link from '@docusaurus/Link';
import Interpolate from '@docusaurus/Interpolate';

export default function VisitMyWebsiteMessage() {
  return (
    // highlight-start
    <Interpolate
      values={{
        firstName: 'Sébastien',
        website: (
          <Link to="https://docusaurus.io" className="my-website-class">
            website
          </Link>
        ),
      }}>
      {'Hello, {firstName} ! Comment allez-vous ? Jetez un coup d\'œil à mon {website}'}
    </Interpolate>
    // highlight-end
  );
}
```

### `<Translate/>` {#translate}

Lors de la [localisation de votre site](./i18n/i18n-introduction.mdx), le composant `<Translate/>` permettra de fournir **un support de traduction aux composants React**, comme votre page d'accueil. Le composant `<Translate>` prend en charge l'[interpolation](#interpolate).

Les chaînes de traduction seront extraites statiquement de votre code avec la CLI [`docusaurus write-translations`](./cli.mdx#docusaurus-write-translations-sitedir) et un fichier de traduction `code.json` sera créé dans `website/i18n/[locale]`.

:::note

Les props de `<Translate/>` **doivent être des chaînes codées en dur**.

Mis à part la prop `values` utilisée pour l'interpolation, il **n'est pas possible d'utiliser des variables**, sinon l'extraction statique ne fonctionnerait pas.

:::

#### Props {#translate-props}

- `children` : chaîne non traduite dans la locale par défaut du site (peut contenir des [placeholders d'interpolation](#interpolate))
- `id` : valeur optionnelle à utiliser comme clé dans les fichiers de traduction JSON
- `description` : texte optionnel pour aider le traducteur
- `values` : objet optionnel contenant des valeurs placeholder d'interpolation

#### Exemple {#example}

```jsx title="src/pages/index.js"
import React from 'react';
import Layout from '@theme/Layout';

// highlight-start
import Translate from '@docusaurus/Translate';
// highlight-end

export default function Home() {
  return (
    <Layout>
      <h1>
        {/* highlight-start */}
        <Translate
          id="homepage.title"
          description="Le message de bienvenue de la page d'accueil">
          Bienvenue sur mon site web
        </Translate>
        {/* highlight-end */}
      </h1>
      <main>
        {/* highlight-start */}
        <Translate values={{firstName: 'Sébastien'}}>
          {'Bienvenue, {firstName} ! Comment allez-vous ?'}
        </Translate>
        {/* highlight-end */}
      </main>
    </Layout>
  );
}
```

:::note

Vous pouvez même omettre la prop enfant et spécifier manuellement une chaîne de traduction dans votre fichier `code.json` après avoir exécuté la commande CLI `docusaurus write-translations`.

```jsx
<Translate id="homepage.title" />
```

:::

## Hooks {#hooks}

### `useDocusaurusContext` {#useDocusaurusContext}

Hook de React pour accéder au contexte Docusaurus. Le contexte contient l'objet `siteConfig` depuis [docusaurus.config.js](api/docusaurus.config.js.mdx) et quelques métadonnées supplémentaires du site.

```ts
type PluginVersionInformation =
  | {readonly type: 'package'; readonly version?: string}
  | {readonly type: 'project'}
  | {readonly type: 'local'}
  | {readonly type: 'synthetic'};

type SiteMetadata = {
  readonly docusaurusVersion: string;
  readonly siteVersion?: string;
  readonly pluginVersions: Record<string, PluginVersionInformation>;
};

type I18nLocaleConfig = {
  label: string;
  direction: string;
};

type I18n = {
  defaultLocale: string;
  locales: [string, ...string[]];
  currentLocale: string;
  localeConfigs: Record<string, I18nLocaleConfig>;
};

type DocusaurusContext = {
  siteConfig: DocusaurusConfig;
  siteMetadata: SiteMetadata;
  globalData: Record<string, unknown>;
  i18n: I18n;
  codeTranslations: Record<string, string>;
};
```

Exemple d'utilisation :

```jsx
import React from 'react';
import useDocusaurusContext from '@docusaurus/useDocusaurusContext';

const MyComponent = () => {
  // highlight-next-line
  const {siteConfig, siteMetadata} = useDocusaurusContext();
  return (
    <div>
      {/* highlight-start */}
      <h1>{siteConfig.title}</h1>
      <div>{siteMetadata.siteVersion}</div>
      <div>{siteMetadata.docusaurusVersion}</div>
      {/* highlight-end */}
    </div>
  );
};
```

:::note

L'objet `siteConfig` ne contient que des **valeurs sérialisables** (valeurs qui sont préservées après `JSON.stringify()`). Les fonctions, les regex, etc. seraient perdus du côté client.

:::

### `useIsBrowser` {#useIsBrowser}

Renvoie `true` lorsque l'application React s'est hydratée avec succès dans le navigateur.

:::warning

Utilisez ce hook au lieu de `typeof windows !== 'undefined'` dans la logique de rendu de React.

Le premier rendu côté client (dans le navigateur) **doit être exactement le même** que le rendu côté serveur (Node.js). Ne pas suivre cette règle peut entraîner des comportements d'hydratation inattendus, comme décrit dans [The Perils of Rehydration](https://www.joshwcomeau.com/react/the-périls-of-rehydration/).

:::

Exemple d'utilisation :

```jsx
import React from 'react';
import useIsBrowser from '@docusaurus/useIsBrowser';

const MyComponent = () => {
  // highlight-start
  const isBrowser = useIsBrowser();
  // highlight-end
  return <div>{isBrowser ? 'Client' : 'Serveur'}</div>;
};
```

### `useBaseUrl` {#useBaseUrl}

Hook de React pour préfixer le `baseUrl` de votre site à une chaîne.

:::warning

**Ne l'utilisez pas pour les liens normaux !**

Le préfixe `/baseUrl/` est automatiquement ajouté à tous les **chemins absolus** par défaut :

- Markdown : `[link](/my/path)` sera lié à `/baseUrl/my/path`
- React : `<Link to="/my/path/">link</Link>` sera lié à `/baseUrl/my/path`

:::

#### Options {#options}

```ts
type BaseUrlOptions = {
  forcePrependBaseUrl: boolean;
  absolute: boolean;
};
```

#### Exemple d'utilisation : {#example-usage}

```jsx
import React from 'react';
import useBaseUrl from '@docusaurus/useBaseUrl';

const SomeImage = () => {
  // highlight-start
  const imgSrc = useBaseUrl('/img/myImage.png');
  // highlight-end
  return <img src={imgSrc} />;
};
```

:::tip

Dans la plupart des cas, vous n'avez pas besoin de `useBaseUrl`.

Préférez un appel `require()` pour les [ressources](./guides/markdown-features/markdown-features-assets.mdx) :

```jsx
<img src={require('@site/static/img/myImage.png').default} />
```

:::

### `useBaseUrlUtils` {#useBaseUrlUtils}

Parfois, `useBaseUrl` n'est pas suffisant. Ce hook retourne des utilitaires supplémentaires liés à l'URL de base de votre site.

- `withBaseUrl` : utile si vous avez besoin d'ajouter des URL de base à plusieurs URL à la fois.

```jsx
import React from 'react';
import {useBaseUrlUtils} from '@docusaurus/useBaseUrl';

const Component = () => {
  const urls = ['/a', '/b'];
  // highlight-start
  const {withBaseUrl} = useBaseUrlUtils();
  const urlsWithBaseUrl = urls.map(withBaseUrl);
  // highlight-end
  return <div>{/* ... */}</div>;
};
```

### `useGlobalData` {#useGlobalData}

Hook de React pour accéder aux données globales de Docusaurus créées par tous les plugins.

Les données globales sont des espaces nommés par le nom du plugin et l'ID du plugin.

:::info

L'ID du plugin n'est utile que si un plugin est utilisé plusieurs fois sur le même site. Chaque instance de plugin est capable de créer ses propres données globales.

:::

```ts
type GlobalData = Record<
  PluginName,
  Record<
    PluginId, // "default" par défaut
    any // données spécifiques au plugin
  >
>;
```

Exemple d'utilisation :

```jsx
import React from 'react';
// highlight-next-line
import useGlobalData from '@docusaurus/useGlobalData';

const MyComponent = () => {
  // highlight-start
  const globalData = useGlobalData();
  const myPluginData = globalData['my-plugin']['default'];
  return <div>{myPluginData.someAttribute}</div>;
  // highlight-end
};
```

:::tip

Inspectez les données globales de votre site depuis `./docusaurus/globalData.json`

:::

### `usePluginData` {#usePluginData}

Accéder aux données globales créées par une instance spécifique du plugin.

C'est le hook le plus pratique pour accéder aux données globales du plugin et devrait être utilisé la plupart du temps.

`pluginId` est facultatif si vous n'utilisez pas de plugins multi-instances.

```ts
function usePluginData(
  pluginName: string,
  pluginId?: string,
  options?: {failfast?: boolean},
);
```

Exemple d'utilisation :

```jsx
import React from 'react';
// highlight-next-line
import {usePluginData} from '@docusaurus/useGlobalData';

const MyComponent = () => {
  // highlight-start
  const myPluginData = usePluginData('my-plugin');
  return <div>{myPluginData.someAttribute}</div>;
  // highlight-end
};
```

### `useAllPluginInstancesData` {#useAllPluginInstancesData}

Accéder aux données globales créées par un plugin spécifique. Donné un nom de plugin, il retourne les données de toutes les instances de plugins de ce nom, pour chaque id de plugin.

```ts
function useAllPluginInstancesData(
  pluginName: string,
  options?: {failfast?: boolean},
);
```

Exemple d'utilisation :

```jsx
import React from 'react';
// highlight-next-line
import {useAllPluginInstancesData} from '@docusaurus/useGlobalData';

const MyComponent = () => {
  // highlight-start
  const allPluginInstancesData = useAllPluginInstancesData('my-plugin');
  const myPluginData = allPluginInstancesData['default'];
  return <div>{myPluginData.someAttribute}</div>;
  // highlight-end
};
```

## Fonctions {#functions}

### `interpolate` {#interpolate-1}

La contrepartie impérative du composant [`<Interpolate>`](#interpolate).

#### Signature {#signature}

```ts
// Interpolation simple de chaîne de caractères
function interpolate(text: string, values: Record<string, string>): string;

// interpolation JSX
function interpolate(
  text: string,
  values: Record<string, ReactNode>,
): ReactNode;
```

#### Exemple {#example-1}

```js
// highlight-next-line
import {interpolate} from '@docusaurus/Interpolate';

const message = interpolate('Welcome {firstName}', {firstName: 'Sébastien'});
```

### `translate` {#translate-imperative}

La contrepartie impérative du composant [`<Translate>`](#translate). Elle prend en charge aussi l'[interpolation des placeholders](#interpolate).

:::tip

Utilisez l'API impérative pour les **rares cas** où un **composant ne peut pas être utilisé**, tels que :

- la métadonnée `title` de la page
- les props `placeholder` pour des saisies de formulaire
- les props `aria-label` pour l'accessibilité

:::

#### Signature {#signature-1}

```ts
function translate(
  translation: {message: string; id?: string; description?: string},
  values: Record<string, string>,
): string;
```

#### Exemple {#example-2}

```jsx title="src/pages/index.js"
import React from 'react';
import Layout from '@theme/Layout';

// highlight-next-line
import {translate} from '@docusaurus/Translate';

export default function Home() {
  return (
    <Layout
      // highlight-next-line
      title={translate({message: 'Titre méta de ma page'})}>
      <img
        src={'https://docusaurus.io/logo.png'}
        aria-label={
          // highlight-start
          translate(
            {
              message: 'Le logo du site {siteName}',
              // Optionnel
              id: 'homepage.logo.ariaLabel',
              description: 'Libellé aria du logo de la page d\'accueil',
            },
            {siteName: 'Docusaurus'},
          )
          // highlight-end
        }
      />
    </Layout>
  );
}
```

## Modules {#modules}

### `ExecutionEnvironment` {#executionenvironment}

Un module qui expose quelques variables booléennes pour vérifier l'environnement de rendu actuel.

:::warning

Pour la logique de rendu de React, utilisez [`useIsBrowser()`](#useIsBrowser) ou [`<BrowserOnly>`](#browseronly) à la place.

:::

Exemple :

```js
import ExecutionEnvironment from '@docusaurus/ExecutionEnvironment';

if (ExecutionEnvironment.canUseDOM) {
  require('lib-that-only-works-client-side');
}
```

| Champ                                             | Description                                                             |
| ------------------------------------------------- | ----------------------------------------------------------------------- |
| `ExecutionEnvironment.canUseDOM`                  | `true` si sur le client/navigateur, `false` si c'est Node.js/pré-rendu. |
| `ExecutionEnvironment.canUseEventListeners`       | `true` si sur le client et nous avons `window.addEventListener`.        |
| `ExecutionEnvironment.canUseIntersectionObserver` | `true` si sur le client et nous avons `IntersectionObserver`.           |
| `ExecutionEnvironment.canUseViewport`             | `true` si sur le client et nous avons `window.screen`.                  |

### `constants` {#constants}

Un module exposant des constantes utiles au code du thème côté client.

```js
import {DEFAULT_PLUGIN_ID} from '@docusaurus/constants';
```

| Export nommé        | Valeur     |
| ------------------- | ---------- |
| `DEFAULT_PLUGIN_ID` | `default`  |
